# boat

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
docs/: ARCHITECTURE.md  GPU_WORKSPACE.md  M7_MODULE_MIGRATION.json  MODEL_FEATURE_RESEARCH.md  PROJECT_STATUS.md  TELEBOAT_AGENT_AUDIT.md  TELEBOAT_API.md  WORKFLOW.md
native/: fast_boat_math.c
scripts/: __init__.py  analyze_market_bankroll.py  analyze_market_curvature.py  analyze_market_ensemble.py  analyze_market_momentum.py  analyze_market_rank_residual.py  analyze_market_shadow.py  analyze_market_structure.py  audit_day_completeness.py  audit_standardized_evaluation.py  backfill_beforeinfo.py  benchmark_database_backends.py  benchmark_fast_math.py  benchmark_validation_cache.py  bootstrap_market_probe.py  build_native_fast_math.sh  configure_teleboat_login.py  measure_dashboard_endpoints.py  persist_selected_feature_cache.py  remote_best_roi_attribution_runner.py  remote_runtime_probe.py  repair_odds_from_raw_archives.py  reparse_racelists.py  run_standardized_365d_evaluations.sh  run_standardized_evaluation_cycle.sh  sync_sqlite_delta_to_postgresql.py  update_remote_eval_status.py  versioned_module_inventory.py
tests/: test_adaptive_allocation.py  test_analyze_market_shadow.py  test_archive_performance.py  test_archives.py  test_backup_batch_bound.py  test_bankroll_policy.py  test_base_features_missing.py  test_beforeinfo_collection_schedule.py  test_calibrated_runtime.py  test_calibrated_shadow_model.py  test_closing_odds.py  test_closing_odds_momentum.py  (+127 more)
(+338 files in other folders)
